Flickering cursor when `cursor: ...` set in CSS and spacebar is held
Categories
(Core :: Widget: Cocoa, defect, P3)
Tracking
()
Webcompat Priority | P3 |
People
(Reporter: mozilla, Unassigned)
References
Details
Attachments
(1 file)
485 bytes,
text/html
|
Details |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.105 Safari/537.36
Steps to reproduce:
See the attached file for a reproducible case, manual steps are as follows:
- Set a custom cursor via CSS, e.g.
cursor: grab
on an element - Hover over that element while spacebar is pressed
Actual results:
The cursor repeatedly flickers and disappears momentarily
Expected results:
The cursor should have remained consistently visible.
Hi, Scott Sidwell!
Thanks for your contribution!
Could you tell me which Mozilla version are you using?
Please let us know if this issue is reproduced in the latest Nightly edition. You can download it from here: https://nightly.mozilla.org/
If you still have the issue please create a new profile, you have the steps here: https://support.mozilla.org/en-US/kb/profile-manager-create-and-remove-firefox-profiles?redirectlocale=en-US&redirectslug=Managing-profiles#w_starting-the-profile-manager
support.mozilla.orgsupport.mozilla.org
Once you have all this information, please let us know so we can continue investigating.
Regards,
Comment 2•2 years ago
|
||
I can reproduce this issue on macOS, but can't on Linux.
Hi Scott,
Thanks for reporting this bug and for providing a test case.
I was able to reproduce the issue reported on Firefox Nightly 82.0a1 (2020-09-09), Beta 81.0b8 and Release 80.0.1, on Mac 10.15.
I'll add this ticket to the Core: CSS Object Model in the hope someone from their team can take a look at this one and investigate.
Regards,
Virginia
Updated•2 years ago
|
Updated•2 years ago
|
Updated•1 year ago
|
Description
•