Bug 1658226: Avoid hiding the cursor on macOS when the space bar is pressed. r=masayuki

Differential Revision: https://phabricator.services.mozilla.com/D225697